# hashify

./: .gitignore  Cargo.toml  README.md
benches/: phf_bench.rs
src/: large.rs  lib.rs  tiny.rs
tests/: test.rs
